module(
    name = "ray",
    repo_name = "com_github_ray_project_ray",
)

bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "grpc", version = "1.71.0")
bazel_dep(name = "flatbuffers", version = "25.2.10")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "google_bazel_common", version = "0.0.1")
bazel_dep(name = "cython", version = "3.0.11-1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "jemalloc", version = "5.3.0-bcr.alpha.1")
bazel_dep(name = "rules_proto_grpc", version = "5.0.1")
bazel_dep(name = "prometheus-cpp", version = "1.3.0.bcr.2")
bazel_dep(name = "bazel_jar_jar", version = "0.1.7")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
bazel_dep(name = "openssl", version = "3.3.1.bcr.1")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.0.1")
bazel_dep(name = "protoc-gen-validate", version = "1.2.1.bcr.1")
bazel_dep(name = "opencensus-proto", version = "0.4.1.bcr.2")
bazel_dep(name = "abseil-cpp", version = "20250127.1")
bazel_dep(name = "boost.asio", version = "1.83.0.bcr.2")
bazel_dep(name = "boost.thread", version = "1.83.0")
bazel_dep(name = "boost.bimap", version = "1.83.0")
bazel_dep(name = "boost.beast", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.system", version = "1.83.0")
bazel_dep(name = "boost.bind", version = "1.83.0")
bazel_dep(name = "boost.circular_buffer", version = "1.83.0")
bazel_dep(name = "boost.endian", version = "1.83.0")
bazel_dep(name = "boost.optional", version = "1.83.0")
bazel_dep(name = "boost.align", version = "1.83.0")
# bazel_dep(name = "boost.dll", version = "1.87.0")
bazel_dep(name = "boost.filesystem", version = "1.83.0")
bazel_dep(name = "boost.range", version = "1.83.0")
bazel_dep(name = "boost.process", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.functional", version = "1.83.0")
bazel_dep(name = "boost.iostreams", version = "1.83.0")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "opencensus-cpp", version = "0.0.0-20230502-50eb5de.bcr.1")
bazel_dep(name = "spdlog", version = "1.15.2")
bazel_dep(name = "nlohmann_json", version = "3.11.3.bcr.1")
bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "msgpack-c", version = "6.1.0")
bazel_dep(name = "protobuf", version = "30.2")
bazel_dep(name = "boringssl", version = "0.20250311.0")
