[build-system]
build-backend = 'mesonpy'

# Potentially, lower versions may work, yet they haven't been tested nor guaranteed to work.
# The only 2 hard requirements are: `meson>=1.3.0` and `cython>=3.0.0`.
requires = [
    'meson_python>=0.16.0',
    'meson>=1.5.2',
    'cython>=3.0.11'
]


[project]
name = 'ray'
version = '3.0.0.dev0'
readme = 'README.rst'
requires-python = '>=3.14'
license = {file = 'LICENSE'}

# @EUGO_CHANGE:
# These and `[project.optional-dependencies]` should be synced against `setup.py`, `requirements.txt`. and PyPi API:
#
dependencies = [
    'click>=7.0',
    'filelock',
    'jsonschema',
    'msgpack<2.0.0,>=1.0.0',
    'packaging>=24.2',
    'protobuf>=3.20.3',
    'pyyaml',
    'watchfiles', # @NOTE: its in requirements.txt but not in setup.py - leaving for now
    'requests',
]

[project.optional-dependencies]
all_cpp = [
    'ray[all]',
    'ray[cpp]'
]

all = [
    'ray[air]',
    'ray[adag]',
    'ray[client]',
    'ray[default]',
    'ray[data]',
    'ray[observability]',
    'ray[serve]',
    'ray[serve_grpc]',
    'ray[serve_async_inference]',
    'ray[tune]',
    'ray[train]',
    'ray[rllib]',
    'ray[cgraph]',
]

air = [
    'ray[data]',
    'ray[serve]',
    'ray[tune]',
    'ray[train]',
]

cgraph = [
    'cupy-cuda12x; sys_platform != "darwin"',
]

adag = [
'ray[cgraph]',
]

client = [
    'grpcio',
]

cpp = [
    "ray_cpp==3.0.0.dev0",
]

default = [
    "aiohttp >= 3.13.3",
    "aiohttp_cors",
    "colorful",
    "py-spy >= 0.2.0; python_version < '3.12'",  # noqa:E501
    "py-spy >= 0.4.0; python_version >= '3.12'",  # noqa:E501
    "requests",
    "grpcio >= 1.42.0",
    "opencensus",
    "opentelemetry-sdk >= 1.30.0",
    "opentelemetry-exporter-prometheus",
    "opentelemetry-proto",
    "pydantic!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,!=2.10.*,!=2.11.*,<3",
    "prometheus_client >= 0.7.1",
    "smart_open",
    "virtualenv >=20.0.24, !=20.21.1",  # For pip runtime env.

    # These packages are vendored in the standard, Bazel-built Ray, but we want to decouple them:
    # `@/python/ray/_private/runtime_env/agent/thirdparty_files/`
    'aiohappyeyeballs',
    'aiohttp',
    'aiosignal',
    'attrs',
    'frozenlist',
    'idna',
    'multidict',
    'propcache',
    'yarl',

    # `@/python/ray/thirdparty_files/`
    'colorama',
    'psutil',
    'setproctitle'
]

data = [
    'numpy>=1.20',
    'pandas >= 1.3',
    'pyarrow>=9.0.0',
    'fsspec',
]

observability = [
    'memray; sys_platform != "win32"',
]

rllib = [
    'ray[tune]',

    'dm_tree',
    'gymnasium==1.2.2',
    'lz4',
    'ormsgpack>=1.7.0',
    'pyyaml',
    'scipy',
]

serve = [
    'uvicorn[standard]',
    'requests',
    'starlette',
    'fastapi',
    'watchfiles',
    'ray[default]',
]

serve_grpc = [
    'ray[serve]',
    'grpcio>=1.42.0',
    'pyOpenSSL',
]

serve_async_inference = [
    'ray[serve]',
    'celery',
    'taskiq',
]

tune = [
    'pandas',
    "pydantic!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,!=2.10.*,!=2.11.*,<3",
    'tensorboardX>=1.9',
    'requests',
    'pyarrow>=9.0.0',
    'fsspec',
]

train = [
    'ray[tune]',
    "pydantic!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,!=2.10.*,!=2.11.*,<3",
]

# ray[llm] depends on ray[data] + ray[serve]. Not included in ray[all] by design —
# vllm's dependency set is very large and specific, will likely conflict with other ML libraries.
# Keep in sync with python/requirements/llm/llm-requirements.txt
llm = [
    'ray[data]',
    'ray[serve]',
    'vllm[audio]>=0.15.0',
    'nixl>=0.6.1',
    'transformers>=4.57.3',
    'jsonref>=1.1.0',
    'jsonschema',
    'ninja',
    'async-timeout; python_version < "3.11"',
    'typer',
    'meson',
    'pybind11',
    'hf_transfer',
]


[project.scripts]
ray = 'ray.scripts.scripts:main'
rllib = 'ray.rllib.scripts:cli' # In original version, it was only provided with `[rllib]` extra. One day, we'll find how to achieve that in meson-python.
serve = 'ray.serve.scripts:cli'
tune = 'ray.tune.cli.scripts:cli'


[tool.ruff]
line-length = 88
extend-exclude = [
    "python/ray/thirdparty_files/",
    "python/ray/_private/thirdparty/",
    "python/ray/_private/runtime_env/agent/thirdparty_files/",
    "python/build/",
    "python/ray/workflow/tests/mock_server.py",
    "python/ray/serve/tests/test_config_files/syntax_error.py",
    "rllib/examples/envs/classes/multi_agent/footsies/game/proto/footsies_service_pb2.py",
    "rllib/examples/envs/classes/multi_agent/footsies/game/proto/footsies_service_pb2_grpc.py",
]

[tool.ruff.lint]
extend-select = ["I", "B", "Q", "C4", "W"]
ignore = [
    "B003",
    "B005",
    "B007",
    "B008",
    "B011",
    "B012",
    "B015",
    "B017",
    "B028",
    "C408",
    "C417",
    "E741",
    # TODO(MortalHappiness): Remove the following rules from the ignore list
    # The above are rules ignored originally in flake8
    # The following are rules ignored in ruff
    "B023",
    "B024",
    "B026",
    "B027",
    "B904",
    "C419",
    # Below are auto-fixable rules
    "I001",
]

[tool.ruff.lint.flake8-quotes]
avoid-escape = false

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", "afterray"]
known-local-folder = ["ray", "ray_release"]
known-third-party = ["grpc"]

[tool.ruff.lint.isort.sections]
afterray = ["psutil", "setproctitle"]

# Some of the directories need to be kept in the blacklist for isort ("I" rule):
# python/ray/cloudpickle/*
# doc/*
# python/ray/__init__.py
# For the rest we will gradually remove them from the blacklist as we
# reformat the code to follow the style guide.
[tool.ruff.lint.per-file-ignores]
"doc/*" = ["I"]
"python/ray/__init__.py" = ["I"]
"python/ray/dag/__init__.py" = ["I"]
"python/ray/air/__init__.py" = ["I"]
"release/*_tests/*.py" = ["I"]

# TODO(matthewdeng): Remove this line
"python/ray/tune/__init__.py" = ["I"]
