load("@py_deps_buildkite//:requirements.bzl", ci_require = "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

exports_files([
    "pytest_wrapper.py",
    "default_doctest_pytest_plugin.py",
])

py_binary(
    name = "pyzip",
    srcs = ["pyzip.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "gen_extract",
    srcs = ["gen_extract.py"],
    deps = [
        ci_require("bazel-runfiles"),
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_x86_64_config",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_arm64_config",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "osx_x86_64_config",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "osx_arm64_config",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "windows_x86_64_config",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)
