load("@python3_9//:defs.bzl", python39 = "interpreter")
load("@py_deps_buildkite//:requirements.bzl", ci_require = "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_runtime", "py_runtime_pair")

exports_files([
    "pytest_wrapper.py",
    "default_doctest_pytest_plugin.py",
])

py_binary(
    name = "pyzip",
    srcs = ["pyzip.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "gen_extract",
    srcs = ["gen_extract.py"],
    deps = [
        ci_require("bazel-runfiles"),
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_x86_64_config",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_arm64_config",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "osx_x86_64_config",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "osx_arm64_config",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "windows_x86_64_config",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

py_runtime(
    name = "py39_runtime",
    interpreter = python39,
    python_version = "PY3",
    visibility = ["//visibility:private"],
)

py_runtime_pair(
    name = "py39_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":py39_runtime",
    visibility = ["//visibility:private"],
)

toolchain(
    name = "py39_toolchain",
    exec_compatible_with = ["//:hermetic_python"],
    toolchain = ":py39_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)
